# An_Open_Source_Collection_Of_IBD_Cohort_Identification_Models

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
models/bert/: readme.md
models/bow/: readme.md
models/regex/: readme.md  regex.py
models/spacy/: readme.md  spacy.py
models/tfidf/: readme.md
models/word2vec/: readme.md
src/: main.py
src/nlp_pipeline/common/: caching.py  data_utils.py  evaluation.py  fairness.py  feature_importance.py  logging_setup.py  resource_monitor.py
src/nlp_pipeline/config/: constants.py  filter_mrconzo_ibd_drugs.py  sample_size_calculation.py
src/nlp_pipeline/doc2patient/: decision_tree.py  heatmap.py  log_reg.py
src/nlp_pipeline/models/bio_clinical_bert/: model.py  pipeline.py
src/nlp_pipeline/models/bow/: model.py  pipeline.py
src/nlp_pipeline/models/distilbert/: model.py  pipeline.py
src/nlp_pipeline/models/llm_analytics/: llm_analytics_pipe.py  llm_carbon_estimation.py
src/nlp_pipeline/models/regex/: model.py  pipeline.py
src/nlp_pipeline/models/roberta/: model.py  pipeline.py
src/nlp_pipeline/models/sbert_base/: model.py  pipeline.py
src/nlp_pipeline/models/sbert_med/: model.py  pipeline.py
src/nlp_pipeline/models/spacy/: model.py  pipeline.py
src/nlp_pipeline/models/tf_idf/: model.py  pipeline.py
src/nlp_pipeline/models/word2vec/: model.py  pipeline.py
src/tests/: conftest.py
src/tests/bio_clinical_bert/: test_bio_clinical_bert_model.py  test_bio_clinical_bert_pipeline.py
src/tests/bow/: test_bow_model.py  test_bow_pipeline.py
src/tests/distilbert/: test_distilbert_model.py  test_distilbert_pipeline.py
src/tests/regex/: test_regex_model.py  test_regex_pipeline.py
src/tests/roberta/: test_roberta_model.py  test_roberta_pipeline.py
src/tests/sbert/: test_sbert_model.py  test_sbert_pipeline.py
src/tests/sbert_med/: test_sbert_med_model.py  test_sbert_med_pipeline.py
src/tests/spacy/: test_spacy_model.py  test_spacy_pipeline.py
src/tests/tfidf/: test_tf_idf_model.py  test_tf_idf_pipeline.py
src/tests/utilities/: test_caching.py  test_data_utils.py  test_evaluation.py  test_fairness.py  test_feature_importance.py  test_logging.py  test_resource_monitor.py
src/tests/word2vec/: test_word2vec_model.py  test_word2vec_pipeline.py
