[tool.poetry]
name = "IBD_NLP_Cohort_Identification_IC_IBD_Part_2"
version = "1.0.0"
description = "bert and cuda enabled environmen for NLP modelling and advanced model development + analytics"
authors = ["MS"]
readme = "README.md"
license = "CC BY-NC 4.0"
packages = [{ include = "nlp_pipeline", from = "src" }]

[tool.poetry.dependencies]
python = ">3.10,<3.13"
pytest = "8.3.5"

# Machine learning frameworks
torch = { version = "^2.5.1", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }
torchvision = { version = "^0.20.1", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }
torchaudio = { version = "^2.5.1", source = "pytorch-cuda" }
transformers = { extras = ["torch"], version = "4.50.0" }
huggingface-hub = "^0.26.5"
sentencepiece = "^0.2.0"
shap = "0.47.0"
onnx = "1.16.0"
captum = "0.7.0"
codecarbon = "2.8.3"
sentence-transformers = "3.4.1"
lime= "0.2.0.1"
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }


# General scientific stack
numpy = "^1.26.4"
scipy = "^1.13.1"
statsmodels = "^0.14.4"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"

# Data visualization
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
bokeh = "^3.6.2"

# NLP and text processing
spacy = "^3.8.3"
negspacy = "^1.0.4"
datasets = "^3.2.0"
nltk = "^3.9.1"
beautifulsoup4 = "^4.12.3"
bs4 = "^0.0.2"

# API and server development
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
aiohttp = "^3.11.10"

# Utilities
protobuf = "^5.29.1"
pyyaml = "^6.0.2"
openpyxl = "^3.1.5"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
pre-commit = "4.2.0"

# Visualization and analysis extras
gradio = "^4.44.1"

# Optional CUDA/CPU extras
skl2onnx = "1.15.0"
[tool.poetry.extras]
cuda = ["torch", "torchvision", "torchaudio"]
cpu = ["torch", "torchvision", "torchaudio"]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.31.0"
mypy = "^1.13.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$major.$minor.$patch$prerelease"
version_type = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
